--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
-version: '2'
-
+version: '3'
 services:
   teakki:
-    container_name: teakki_container
-    image: registry.cn-hangzhou.aliyuncs.com/teakki/teakki:2.7
+    restart: always
+    image: registry.cn-hangzhou.aliyuncs.com/teakki/teakki:3.0-beta
+    privileged: true
+    container_name: teakki
     ports:
-      - "9001:9002"
+      - '9001:9002'
     volumes:
-      - /teakki_data:/data
+      - ./teakki_data/:/data
